# data-assimilation

./: LICENSE  README.md  environment.yml  pyproject.toml  setup.py
dapy/: __init__.py  utils.py
dapy/filters/: __init__.py  base.py  ensemble_kalman.py  kalman.py  local.py  particle.py
dapy/inference/: __init__.py  base.py  enkf.py  kf.py  localisation.py  pf.py  pou.py
dapy/integrators/: etdrk4.py  implicit_midpoint.pxd  implicitmidpoint.c  implicitmidpoint.pyx  interpolate.c  interpolate.pyx  lorenz63.c  lorenz63.pyx  lorenz96.c  lorenz96.pyx  lorenz_1963.pyx  lorenz_1996.c  lorenz_1996.pyx  navier_stokes.py
dapy/models/: __init__.py  base.py  damped_advection.py  etdrk4integrator.py  fluidsim2d.py  fluidsim2dintegrators.py  integrators.c  integrators.pxd  integrators.pyx  kuramoto_sivashinsky.py  linear.py  linear_gaussian.py  lorenz63.py  lorenz63integrator.c  lorenz63integrator.pyx  lorenz96.py  lorenz96integrator.c  lorenz96integrator.pyx  lorenz_1963.py  lorenz_1996.py  majda_harlim.py  navier_stokes.py  netto79.py  netto_gimeno_mendes.py  nonlinear_wrapper.py  spatial.py  transforms.py
dapy/ot/: __init__.py  batch_solvers.cpp  batch_solvers.pyx  emd.cpp  emd.h  network_simplex_simple.h  (+2 more)
notebooks/: Damped_advection_model_ensemble_size.ipynb  Damped_advection_model_time_stability.ipynb  Fluid simulation 2D model.ipynb  Linear-Gaussian model.ipynb  Lorenz 63 model.ipynb  Lorenz 96 model.ipynb  Lorenz_1963_chaotic_attractor_model.ipynb  Netto 79 model.ipynb  Netto_Gimeno_Mendes_1979_non_linear_model.ipynb  Two-dimensional Navier-Stokes model.ipynb
(+43 files in other folders)
